# peony

./: .clang-format  .env  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  arm.cmake  armhf.cmake  assets.sh  build.rs  build.sh  clean.sh  conanfile.txt  grpc.sh  hal.py  linaro.cmake  mingw.cmake  package.json  schema.sh  test.sh
.cargo/: config.toml
apps/: CMakeLists.txt  main.cc
conan/: conanfile.txt  focal-linux-armhf
conan/profiles/: README.md  amd64
conan/profiles/focal/: amd64  armhf
dashboard/: .env  .env.development  .gitignore  .umirc.ts  package-lock.json  package.json
dashboard/public/: manifest.json
dashboard/src/: App.tsx  Loading.tsx  Router.tsx  actions.ts  index.tsx  main.css
dashboard/src/layouts/application/: index.tsx
dashboard/src/layouts/dashboard/: index.tsx
dashboard/src/plugins/: index.ts
dashboard/src/plugins/forum/: index.ts
dashboard/src/plugins/nut/: Home.tsx  NotFound.tsx  index.ts
dashboard/src/utils/: request.ts
db/migrations/postgresql/2021-04-04-174521_create-rbac/: up.sql
db/migrations/postgresql/2021-04-04-182649_create-ops-cron-tasks/: up.sql
db/migrations/postgresql/2021-04-04-182728_create-ops-crawler-logs/: down.sql  up.sql
debian/: control
docker/: .bash_history  .gitignore  Dockerfile  README.md  bionic.Dockerfile  build.sh  clean.sh  deb.sh  docker.sh  focal.Dockerfile  grpc.sh  image.sh  openwrt.dockerfile  vcpkg.sh  xenial.Dockerfile
docker/alpine/: Dockerfile  amd64.dockerfile  build.sh
docker/ansible/: Dockerfile  build.sh
docker/buildroot/: Dockerfile  README.md  build.sh  deb.sh
docker/buildroot/etc/buildroot/: raspberry-3
docker/buildroot/etc/ct-ng/: armhf
docker/conan/: amd64  armhf  armhf.cmake  build.sh  conanfile.txt  peony.cmake
docker/conan/profiles/: amd64  amd64-bionic  arch  armhf  armhf-buster  armhf-xenial
docker/conan/profiles/bionic/: armhf
docker/conan/profiles/linaro/: 2018  2019  2019.cmake  2020  2020.cmake
docker/crosstool-ng/: amd64  arm-unknown-linux-gnueabihf  armhf  armv7l-unknown-linux-gnueabihf
docker/debian/: changelog  rules
docker/musl/: Dockerfile  build.sh  pkg.sh
docker/openjdk/: Dockerfile  build.sh  ubuntu.Dockerfile  ubuntu.dockerfile
docker/openwrt/: Dockerfile  build.sh
docker/scripts/: deb.sh  deploy.sh  root.sh
docker/ubuntu/: .gitignore  Dockerfile  build.sh  deb.sh
docker/ubuntu/DEBIAN/: control  postrm  rules
docker/ubuntu/conan/: conanfile.txt
docker/ubuntu/debian/: rules
docker/vcpkg/: armhf.cmake  build.sh  install.sh
etc/db/: prepares.toml
etc/db/schema/: up.sql
etc/mysql/schema/: up.sql
etc/postgresql/: prepares.toml
etc/postgresql/schema/: prepares.toml  up.sql
etc/protos/: deploy.proto  forum.proto  nut.proto
etc/sqlite3/schema/: up.sql
etc/staging/: config.toml  id_rsa  id_rsa.pub
include/peony/: application.h  config.h.in  crypt.h  http-request.h  image-magick.h  jwt.h  mysql.h  orm.h  postgresql.h  sqlite3.h  theme.h  tty.h  twilio.h  utils.h  version.h.in
profiles/: armhf
protos/: auth.proto  cbeta.proto  forum.proto  hal.fbs  hal.proto  iapt.fbs  iapt.proto  nut.fbs  nut.proto
src/: CMakeLists.txt  application.cc  application.h  audio-test.cpp  audio.h  aws-test.cpp  aws.cc  aws.h  banner.txt  cache.cc  cache.h  cbeta.h  common.h  config.h.in  courses.h  crawler-test.cpp  crawler.cc  crawler.h  crontab-test.cpp  crontab.h  crypt-test.cpp  crypt.cc  crypt.h  deploy.cc  deploy.grpc.pb.cc  deploy.grpc.pb.h  deploy.h  deploy.pb.cc  deploy.pb.h  edelweiss.cpp  elastic-search-test.cpp  elastic-search.h  email.cc  email.h  env.h  env.rs  errors.rs  forum.grpc.pb.cc  forum.grpc.pb.h  forum.h  (+55 more)
src/app/: db.rs  http.rs  mod.rs  rpc.rs  worker.rs
src/app/generate/: config.rs  nginx.rs  systemd.rs
src/aws/: s3.rs  sqs.rs
src/cache/: mod.rs  redis.rs
src/crypto/: mod.rs  ssha512.rs
src/dict/: stardict.rs
src/hal/: audio.rs  gpio.rs  mod.rs  queue.rs
src/hal/gpio/: button.rs  mod.rs
src/hal/tty/: mod.rs
src/i18n/: locale.rs  mod.rs
src/oauth/: mod.rs
src/oauth/google/: mod.rs  openid.rs
src/orm/: migration.rs  mod.rs  mysql.rs  postgresql.rs  sqlite.rs
src/orm/mysql/: mod.rs  schema.rs  up.sql
src/orm/postgresql/: mod.rs  schema.rs  up.sql
src/orm/sqlite/: mod.rs  up.sql
src/plugins/: mod.rs
src/plugins/cbeta/: mod.rs  rpc.rs
src/plugins/forum/: mod.rs  rpc.rs
src/plugins/forum/models/: post.rs  topic.rs
src/plugins/iapt/: mod.rs  rpc.rs
src/plugins/nut/: create-auth-up.sql  mod.rs  request.rs  rpc.rs  schema.rs
src/plugins/nut/controllers/: home.rs  mod.rs  twilio.rs  users.rs
src/plugins/nut/controllers/admin/: status.rs
src/plugins/nut/controllers/pi/: mod.rs
src/plugins/nut/models/: attachment.rs  card.rs  category.rs  friend_link.rs  leave_word.rs  link.rs  log.rs  policy.rs  tag.rs  user.rs  vote.rs
src/plugins/nut/rpc/: auth.rs  mod.rs  site.rs
src/plugins/ops/: mod.rs
src/plugins/ops/crawler/: mod.rs  schema.rs
src/plugins/ops/crawler/models/: log.rs
src/plugins/ops/cron/: down.sql  mod.rs  schema.rs
src/plugins/ops/cron/models/: task.rs
src/plugins/ops/deploy/: mod.rs  models.rs
src/plugins/pi/controllers/: attachements.rs  mod.rs  network.rs  ntp.rs  users.rs  vpn.rs
src/plugins/pi/controllers/network/: mod.rs  wifi.rs
src/protos/: auth.rs  auth_grpc.rs  cbeta.rs  cbeta_grpc.rs  empty.rs  forum.rs  forum_grpc.rs  hal.rs  hal_grpc.rs  iapt.rs  iapt_grpc.rs  mod.rs  nut.rs  nut_grpc.rs
src/queue/: mod.rs  paho.rs  rabbit.rs
src/settings/: mod.rs
src/sys/: image_magick.rs  mod.rs  nmap.rs  ntp.rs
src/sys/network/: dhclient.rs  mod.rs  ubuntu.rs
src/twilio/: mod.rs  sms.rs  voice.rs
templates/: nginx.conf
templates/systemd/: service.conf
tests/: CMakeLists.txt  audio_test.rs  crypt.cc  crypto_test.rs  flatbuffers_test.rs  grpc_test.rs  json.cc  jwt.cc  jwt_test.rs  mqtt.cc  mqtt_test.rs  ntp_test.rs  orm.cc  rabbitmq_test.rs  redis_test.rs  tty.cc  tty_test.rs  twilio.cc  twilio_test.rs  workers_test.rs
ubuntu/: .gitignore  build.sh
ubuntu/debian/: changelog  control  rules
(+14 files in other folders)
