[package]
name = "peony"
version = "2020.12.13"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
edition = "2018"
description = "A total free education & translation & ops solution."
homepage = "https://github.com/saturn-xiv/peony"
license = "MIT"
readme = "README.md"

[profile.release]
lto = true  


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2"
actix-multipart = "0.3"
futures = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
mime = "0.3"
actix-files = "0.4"
actix-session = "0.4"
hex = "0.4"
log = "0.4"
sitemap = "0.4"
serde-xml-rs = "0.4"
actix-cors = "0.5"
toml = "0.5"
md5 = "0.7"
rand = "0.7"
robots_txt = "0.7"
env_logger = "0.8"
encoding_rs = "0.8"
paho-mqtt = "0.8"
r2d2 = "0.8"
xml-rs = "0.8"
lettre = "0.9"
ssh2 = "0.9"
lettre_email = "0.9"
askama = "0.10"
validator = "0.12"
validator_derive = "0.12"
base64 = "0.13"
git2 = "0.13"
juniper = "0.15"
rust-ini = "0.16"
nix = "0.19"
rusoto_core = "0.45"
rusoto_credential = "0.45"
rusoto_s3 = "0.45"
derive_more = "0.99"
bytesize = "1"
eui48 = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
regex = "1"
csv = "1"
actix-rt = "1"
actix-service = "1"
lapin = "1"
lazy_static = "1"
actix-utils = "2"
humantime="2"
url = "2"
percent-encoding = "2"
mime_guess = "2"
actix-web = "3"
clap = "3.0.0-beta.2"
tempfile = "3"
amq-protocol-uri = "6"
elasticsearch = "7.10.0-alpha.1"
jsonwebtoken = "7"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.chrono-tz]
version = "0.5"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

# https://github.com/zeromq/zmq.rs
[dependencies.zmq]
version = "0.9"
features = ["vendored"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.redis]
version = "0.18"
features = ["r2d2"]

[dependencies.diesel]
version = "1"
features = ["chrono", "r2d2", "postgres", "mysql", "sqlite", "128-column-tables"]

[dependencies.rss]
version = "1"
features = ["from_url"]

[dependencies.handlebars]
version = "3"
features = ["script_helper"]
