[package]
name = "peony"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
edition = "2018"
description = "A total free education & translation & ops solution."
homepage = "https://github.com/saturn-xiv/peony"
license = "MIT"
readme = "README.md"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3"
futures = "0.3"
mime = "0.3"
actix-session = "0.4"
hex = "0.4"
linux-embedded-hal = "0.4.0-alpha.0"
log = "0.4"
sitemap = "0.4"
serde-xml-rs = "0.4"
yaml-rust = "0.4"
actix-cors = "0.5"
actix-files = "0.5"
toml = "0.5"
md5 = "0.7"
robots_txt = "0.7"
env_logger = "0.8"
encoding_rs = "0.8"
rand = "0.8"
r2d2 = "0.8"
xml-rs = "0.8"
paho-mqtt = "0.9"
actix = "0.10"
askama = "0.10"
lettre = "0.10.0-alpha.5"
validator = "0.12"
validator_derive = "0.12"
base64 = "0.13"
rust-ini = "0.16"
ipnetwork = "0.17"
nix = "0.19"
rusoto_core = "0.46"
rusoto_credential = "0.46"
rusoto_s3 = "0.46"
rusoto_sqs = "0.46"
derive_more = "0.99"
bytes = "1"
eui48 = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
regex = "1"
csv = "1"
actix-service = "1"
lazy_static = "1"
actix-rt = "2"
actix-utils = "2"
humantime="2"
lapin = "2.0.0-alpha.1"
mime_guess = "2"
url = "2"
percent-encoding = "2"
protobuf = "2"
clap = "3.0.0-beta.2"
tempfile = "3"
serialport = "4"
amq-protocol-uri = "7.0.0-alpha.5"
elasticsearch = "7.10.1-alpha.1"
jsonwebtoken = "7"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.chrono-tz]
version = "0.5"
features = ["serde"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.grpcio]
version = "0.7"
features = ["openssl-vendored"]

[dependencies.zmq]
version = "0.9"
features = ["vendored"]

[dependencies.redis]
version = "0.19"
features = ["r2d2"]

[dependencies.sdl2]
version = "0.34"
features = ["bundled"]

[dependencies.diesel]
version = "1"
features = ["chrono", "r2d2", "postgres", "mysql", "sqlite", "128-column-tables"]

[dependencies.rss]
version = "1"
features = ["validation", "with-serde"]

[dependencies.actix-web]
version = "3"
features = ["openssl"]

[dependencies.handlebars]
version = "3"
features = ["script_helper"]

[dependencies.sodiumoxide]
git = "https://github.com/sodiumoxide/sodiumoxide.git"
rev = "ffd9626"

[dependencies.openssl]
version = "*"
features = ["vendored"]
